--- a/NewsApplication/StoryBoards/SavedNews.storyboard
+++ b/NewsApplication/StoryBoards/SavedNews.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Saved News-->
+        <!--Saved News Page-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController restorationIdentifier="SavedNews" storyboardIdentifier="SavedNews" id="Y6W-OH-hqX" customClass="SavedNews" customModule="NewsApplication" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SavedNews" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="SavedNewsPage" customModule="NewsApplication" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -23,28 +23,65 @@
                                     <constraint firstAttribute="height" constant="44" id="J2r-Aq-euc"/>
                                 </constraints>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="Oqq-Ei-5vu"/>
-                                </connections>
                             </searchBar>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="u8B-Ot-Bwp">
                                 <rect key="frame" x="0.0" y="103" width="393" height="749"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Wng-5Y-ddC">
-                                    <size key="itemSize" width="180" height="180"/>
+                                    <size key="itemSize" width="184" height="258"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SavedNewsCollectionViewCell" id="EC1-A2-Q9L" customClass="SavedNewsCollectionViewCell" customModule="NewsApplication" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="SavedNewsCollectionViewCell" reuseIdentifier="SavedNewsCollectionViewCell" id="EC1-A2-Q9L" customClass="SavedNewsCollectionViewCell" customModule="NewsApplication" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="184" height="258"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="00e-wt-m8U">
-                                            <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="184" height="258"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eri-FG-Sm2">
+                                                    <rect key="frame" x="16" y="16" width="152" height="120"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="120" id="sj5-L9-Z1k"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEq-cF-g9e">
+                                                    <rect key="frame" x="8" y="152" width="168" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fXn-RN-qcB">
+                                                    <rect key="frame" x="54.666666666666657" y="207" width="75" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="ZPR-dy-2lO"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                    <connections>
+                                                        <action selector="deleteButtonClicked:" destination="EC1-A2-Q9L" eventType="touchUpInside" id="j0T-k4-yRH"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="nEq-cF-g9e" firstAttribute="top" secondItem="eri-FG-Sm2" secondAttribute="bottom" constant="16" id="9Ru-xs-ZfA"/>
+                                                <constraint firstAttribute="trailing" secondItem="eri-FG-Sm2" secondAttribute="trailing" constant="16" id="NtX-WF-VEM"/>
+                                                <constraint firstAttribute="trailing" secondItem="nEq-cF-g9e" secondAttribute="trailing" constant="8" id="eK0-KQ-Uec"/>
+                                                <constraint firstAttribute="bottom" secondItem="fXn-RN-qcB" secondAttribute="bottom" constant="16" id="fDn-sm-vRH"/>
+                                                <constraint firstItem="eri-FG-Sm2" firstAttribute="leading" secondItem="00e-wt-m8U" secondAttribute="leading" constant="16" id="h78-tZ-Kf4"/>
+                                                <constraint firstItem="eri-FG-Sm2" firstAttribute="top" secondItem="00e-wt-m8U" secondAttribute="top" constant="16" id="nm0-Ly-Sek"/>
+                                                <constraint firstItem="fXn-RN-qcB" firstAttribute="centerX" secondItem="00e-wt-m8U" secondAttribute="centerX" id="nxk-f9-dTU"/>
+                                                <constraint firstItem="nEq-cF-g9e" firstAttribute="leading" secondItem="00e-wt-m8U" secondAttribute="leading" constant="8" id="tkg-VG-sUN"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                         <color key="backgroundColor" systemColor="systemCyanColor"/>
+                                        <size key="customSize" width="184" height="258"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="eri-FG-Sm2" id="aar-83-jXJ"/>
+                                            <outlet property="titleView" destination="nEq-cF-g9e" id="E1p-w9-ivD"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -61,6 +98,10 @@
                             <constraint firstItem="u8B-Ot-Bwp" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="hdq-ut-GGP"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="u8B-Ot-Bwp" id="EZq-0u-e4b"/>
+                        <outlet property="searchBar" destination="vjH-ZM-UQ3" id="NDJ-ew-ICw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
