--- a/NewsApplication/StoryBoards/Profile.storyboard
+++ b/NewsApplication/StoryBoards/Profile.storyboard
@@ -62,6 +62,17 @@
                                 <color key="textColor" red="0.61001296689999995" green="0.61647796629999996" blue="0.5780046875" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vgW-Vl-Ly2">
+                                <rect key="frame" x="160.33333333333334" y="695" width="72.333333333333343" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="MFL-uT-GhO"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="logout"/>
+                                <connections>
+                                    <action selector="logoutButtonTapped:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="e5y-pW-QgA"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemYellowColor"/>
@@ -73,6 +84,8 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Whj-9z-yui" secondAttribute="trailing" constant="56" id="KHo-j8-gK9"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="K0o-uu-sDl" secondAttribute="trailing" constant="56" id="KXu-Lz-yUd"/>
                             <constraint firstItem="hhg-T2-Ucs" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="Kd9-it-BR4"/>
+                            <constraint firstItem="vgW-Vl-Ly2" firstAttribute="top" secondItem="K0o-uu-sDl" secondAttribute="bottom" constant="40" id="arT-ub-ywW"/>
+                            <constraint firstItem="vgW-Vl-Ly2" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="eaj-qz-Jrt"/>
                             <constraint firstItem="K0o-uu-sDl" firstAttribute="top" secondItem="0cS-gQ-5vC" secondAttribute="bottom" constant="40" id="eoh-ML-tm3"/>
                             <constraint firstItem="0cS-gQ-5vC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="56" id="gyE-FC-hCK"/>
                             <constraint firstItem="2Or-lX-Z4I" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="56" id="hAV-3i-x2Y"/>
