--- a/NewsApplication/StoryBoards/Onboarding.storyboard
+++ b/NewsApplication/StoryBoards/Onboarding.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,18 +14,58 @@
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qBN-9s-CYi">
+                                <rect key="frame" x="100.00000000000001" y="404" width="193.33333333333337" height="44"/>
+                                <color key="backgroundColor" red="0.89859250992063489" green="0.69069630071316912" blue="0.39614636142435944" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.21046214620000001" green="0.21046214620000001" blue="0.21046214620000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Jump To News">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="25"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="skipButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="UbL-dY-Z7D"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="3772237" translatesAutoresizingMaskIntoConstraints="NO" id="cCA-g9-giK" customClass="AnimatedImageView" customModule="Kingfisher">
+                                <rect key="frame" x="58" y="69" width="238" height="190"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="202102_005" translatesAutoresizingMaskIntoConstraints="NO" id="MVe-ii-rUZ">
+                                <rect key="frame" x="42" y="224" width="308" height="185"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="reputation_set_2" translatesAutoresizingMaskIntoConstraints="NO" id="qrg-Ld-MEs">
+                                <rect key="frame" x="23" y="641" width="338" height="154"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Hands holding mobile phones with news on screen" translatesAutoresizingMaskIntoConstraints="NO" id="E8h-cb-BSw">
+                                <rect key="frame" x="33" y="456" width="317" height="172"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                        <color key="backgroundColor" red="0.99215686319999996" green="0.94901967050000002" blue="0.75294119120000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="qBN-9s-CYi" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="7ok-jg-k8k"/>
+                            <constraint firstItem="qBN-9s-CYi" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="IR2-fs-lVD"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="onboardingImage" destination="cCA-g9-giK" id="1gt-P6-Kk1"/>
+                        <outlet property="skipButtonOutlet" destination="qBN-9s-CYi" id="vJg-Os-DES"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="49" y="-2"/>
+            <point key="canvasLocation" x="48.091603053435115" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="202102_005" width="5209" height="5209"/>
+        <image name="3772237" width="2000" height="2000"/>
+        <image name="Hands holding mobile phones with news on screen" width="7500" height="5000"/>
+        <image name="reputation_set_2" width="7370" height="5000"/>
     </resources>
 </document>
