--- a/NewsApplication/StoryBoards/SavedNews.storyboard
+++ b/NewsApplication/StoryBoards/SavedNews.storyboard
@@ -42,13 +42,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eri-FG-Sm2">
-                                                    <rect key="frame" x="16" y="16" width="152" height="120"/>
+                                                    <rect key="frame" x="8" y="8" width="168" height="120"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="120" id="sj5-L9-Z1k"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEq-cF-g9e">
-                                                    <rect key="frame" x="8" y="152" width="168" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEq-cF-g9e">
+                                                    <rect key="frame" x="8" y="144" width="168" height="20.333333333333343"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -65,18 +65,20 @@
                                                     </connections>
                                                 </button>
                                             </subviews>
+                                            <color key="tintColor" red="0.81960785390000002" green="0.6549019814" blue="0.61176472900000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <constraints>
                                                 <constraint firstItem="nEq-cF-g9e" firstAttribute="top" secondItem="eri-FG-Sm2" secondAttribute="bottom" constant="16" id="9Ru-xs-ZfA"/>
-                                                <constraint firstAttribute="trailing" secondItem="eri-FG-Sm2" secondAttribute="trailing" constant="16" id="NtX-WF-VEM"/>
+                                                <constraint firstAttribute="trailing" secondItem="eri-FG-Sm2" secondAttribute="trailing" constant="8" id="NtX-WF-VEM"/>
                                                 <constraint firstAttribute="trailing" secondItem="nEq-cF-g9e" secondAttribute="trailing" constant="8" id="eK0-KQ-Uec"/>
                                                 <constraint firstAttribute="bottom" secondItem="fXn-RN-qcB" secondAttribute="bottom" constant="16" id="fDn-sm-vRH"/>
-                                                <constraint firstItem="eri-FG-Sm2" firstAttribute="leading" secondItem="00e-wt-m8U" secondAttribute="leading" constant="16" id="h78-tZ-Kf4"/>
-                                                <constraint firstItem="eri-FG-Sm2" firstAttribute="top" secondItem="00e-wt-m8U" secondAttribute="top" constant="16" id="nm0-Ly-Sek"/>
+                                                <constraint firstItem="eri-FG-Sm2" firstAttribute="leading" secondItem="00e-wt-m8U" secondAttribute="leading" constant="8" id="h78-tZ-Kf4"/>
+                                                <constraint firstItem="eri-FG-Sm2" firstAttribute="top" secondItem="00e-wt-m8U" secondAttribute="top" constant="8" id="nm0-Ly-Sek"/>
                                                 <constraint firstItem="fXn-RN-qcB" firstAttribute="centerX" secondItem="00e-wt-m8U" secondAttribute="centerX" id="nxk-f9-dTU"/>
                                                 <constraint firstItem="nEq-cF-g9e" firstAttribute="leading" secondItem="00e-wt-m8U" secondAttribute="leading" constant="8" id="tkg-VG-sUN"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <color key="backgroundColor" systemColor="systemCyanColor"/>
+                                        <color key="backgroundColor" red="0.85111093521118164" green="0.71916094106007888" blue="0.67474624551948148" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <size key="customSize" width="184" height="258"/>
                                         <connections>
                                             <outlet property="imageView" destination="eri-FG-Sm2" id="aar-83-jXJ"/>
@@ -87,7 +89,7 @@
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <color key="backgroundColor" red="0.94509804249999996" green="0.92549020049999997" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="u8B-Ot-Bwp" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="5um-wh-FZt"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vjH-ZM-UQ3" secondAttribute="trailing" constant="10" id="8dH-Sl-OXY"/>
@@ -111,12 +113,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
