--- a/NewsApplication/StoryBoards/SignUp.storyboard
+++ b/NewsApplication/StoryBoards/SignUp.storyboard
@@ -65,7 +65,7 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kJ2-q6-chN">
                                 <rect key="frame" x="155.66666666666666" y="658" width="82" height="44"/>
-                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                <color key="backgroundColor" red="0.40000003579999999" green="0.27843138579999999" blue="0.54509806630000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="ISe-B1-gO9"/>
                                 </constraints>
@@ -80,7 +80,7 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" red="0.87394926700464892" green="0.76916111030965473" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.87465818916324301" green="0.84744681791234777" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Mtb-MH-uG0" secondAttribute="trailing" constant="56" id="34b-tX-v3N"/>
                             <constraint firstItem="6yp-dG-4HM" firstAttribute="top" secondItem="abf-Cb-ESI" secondAttribute="bottom" constant="42" id="HcR-W8-us3"/>
@@ -122,9 +122,6 @@
         <image name="signup" width="3000" height="3000"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
